syntax = "proto3";

option go_package = "v1";
option java_package = "stackrox.generated";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/v1/benchmark_service.proto";

import "api/v1/common.proto";

package v1;

enum CheckStatus {
    INFO           = 0;
    WARN           = 1;
    NOTE           = 2;
    PASS           = 3;
    NOT_APPLICABLE = 4;
}

enum BenchmarkReason {
    SCHEDULED = 0;
    TRIGGERED = 1;
}

message CheckResult {
    string id                  = 1;
    string host                = 2;
    string cluster_id          = 3;
    CheckDefinition definition = 4;
    CheckStatus result         = 5;
    repeated string notes      = 6;
}

message BenchmarkResult {
    string id                            = 1;
    string benchmark_id                  = 2;
    repeated CheckResult results         = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time   = 5;
    string host                          = 6;
    string scan_id                       = 7;
    string cluster_id                    = 8;
    BenchmarkReason reason               = 9;
}

service BenchmarkResultsService {

    rpc PostBenchmarkResult(BenchmarkResult) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/benchmarks/results"
            body: "*"
        };
    }

    // No put or delete for benchmark results

}
